add: tuto: 関数の引数

--- a/03_Julia_function.ipynb
+++ b/03_Julia_function.ipynb
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -74,7 +74,7 @@
        "123"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -129,7 +129,7 @@
        "123"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -238,7 +238,7 @@
        "5"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -254,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -263,7 +263,7 @@
        "6"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -291,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -313,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -322,7 +322,7 @@
        "9"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -337,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -369,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -378,7 +378,7 @@
        "#3 (generic function with 1 method)"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -398,7 +398,7 @@
        "#5 (generic function with 1 method)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -411,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -423,7 +423,7 @@
        " 9"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -450,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -475,6 +475,311 @@
     "added, subed = add_sub(1, 2)\n",
     "println(added) # -> 3\n",
     "println(subed) # -> -1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 可変長引数\n",
+    "引数の最後の変数の後ろに省略記号 `...` を指定することで、任意の数の引数をとることができるようになる\n",
+    "\n",
+    "省略記号を付与された引数はタプルとして展開される"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 + 2 = 3\n",
+      "(3, 4, 5)\n"
+     ]
+    }
+   ],
+   "source": [
+    "p(x, y, vargs...) = println(\"$x + $y = $(x + y)\\n$(vargs)\")\n",
+    "p(1, 2, 3, 4, 5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n",
+      "16\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 引数を省略する別の方法としてオプション引数も使える\n",
+    "\n",
+    "# 文字列 str を n進数（デフォルト = 10進数）の整数に変換する関数\n",
+    "parseInt(str, n=10) = parse(Int, str, base=n)\n",
+    "\n",
+    "## 引数を省略した場合はデフォルトの値が使われる\n",
+    "println(parseInt(\"10\")) # \"10\" -> 10進数: 10\n",
+    "\n",
+    "## 引数を指定することもできる\n",
+    "println(parseInt(\"10\", 16)) # \"10\" -> 16進数: 16"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "答えは 199 だね！\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "199"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 多数の引数をとり、その順番を覚えにくい関数に対してはキーワード引数が使える\n",
+    "## -> 引数の指定をキーワードで行うことができる\n",
+    "## 関数宣言を行う行で `;` 以降にキーワード引数を定義する\n",
+    "\n",
+    "# x, y を加算する関数\n",
+    "## オプション:\n",
+    "### showAddingMessageキーワード: trueなら加算することを宣言するメッセージを表示\n",
+    "### showAnswerMessageキーワード: trueなら計算結果のメッセージを表示\n",
+    "function addWithShowingMessage(x, y; showAddingMessage=false, showAnswerMessage=false)\n",
+    "    if showAddingMessage\n",
+    "        printMessageForAdding(x, y)\n",
+    "    end\n",
+    "    a = add(x, y)\n",
+    "    if showAnswerMessage\n",
+    "        printMessageForAnswer(a)\n",
+    "    end\n",
+    "    a\n",
+    "end\n",
+    "\n",
+    "# 計算結果のメッセージ付きで加算関数を実行\n",
+    "## 100 + 99 -> 199\n",
+    "addWithShowingMessage(100, 99, showAnswerMessage=true)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.14 と 0.86 を足すよ！\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "4.0"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# キーワード引数に対して省略記号を付与することも可能\n",
+    "\n",
+    "function addWithShowingMessage(x, y; kwargs...)\n",
+    "    if kwargs[:showAddingMessage]\n",
+    "        printMessageForAdding(x, y)\n",
+    "    end\n",
+    "    a = add(x, y)\n",
+    "    if kwargs[:showAnswerMessage]\n",
+    "        printMessageForAnswer(a)\n",
+    "    end\n",
+    "    a\n",
+    "end\n",
+    "\n",
+    "addWithShowingMessage(3.14, 0.86, showAddingMessage=true, showAnswerMessage=false)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### do ブロック構文\n",
+    "関数を引数をとる関数を使うとき、引数に渡す関数が複数行に渡る場合は記述が複雑になりがちである\n",
+    "\n",
+    "そのような場合は、`do`ブロックを使うとシンプルに書ける"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5-element Array{Int64,1}:\n",
+       "  3\n",
+       "  4\n",
+       "  9\n",
+       "  8\n",
+       " 15"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 普通に書くと以下のように 無名関数を beginブロックでくくることになる\n",
+    "\n",
+    "# 配列の各要素に対して以下の処理を施す\n",
+    "## 偶数の場合は2倍にする\n",
+    "## 基数の場合は3倍にする\n",
+    "map(x->begin\n",
+    "        if x % 2 == 0\n",
+    "            return x * 2\n",
+    "        else\n",
+    "            return x * 3\n",
+    "        end\n",
+    "    end,\n",
+    "    [1, 2, 3, 4, 5]\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5-element Array{Int64,1}:\n",
+       "  3\n",
+       "  4\n",
+       "  9\n",
+       "  8\n",
+       " 15"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# doブロックは、無名関数を生成し、直前にある関数の第一引数に渡す\n",
+    "## -> シンプルに書ける\n",
+    "\n",
+    "map([1, 2, 3, 4, 5]) do x\n",
+    "    if x % 2 == 0\n",
+    "        return x * 2\n",
+    "    else\n",
+    "        return x * 3\n",
+    "    end\n",
+    "end"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      ".ipynb_checkpoints/\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# ファイルを開いて処理を行った後、ファイルを閉じる関数\n",
+    "fopen(callback, filename, mode=\"r\") = begin\n",
+    "    io = open(filename, mode)\n",
+    "    try\n",
+    "        callback(io)\n",
+    "    finally\n",
+    "        close(io)\n",
+    "    end\n",
+    "end\n",
+    "\n",
+    "# .gitignore を読み込んで 内容を出力する\n",
+    "fopen(\".gitignore\") do io\n",
+    "    println(read(io, String))\n",
+    "end"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### ドット構文\n",
+    "- **関数のベクトル化**\n",
+    "    - 既存の関数を配列の各要素に適用して新しい配列を作ること\n",
+    "    - Juliaにおける map関数\n",
+    "\n",
+    "Juliaでは、関数のベクトル化を行うのに `map`関数を使う以外の方法として、ドット構文が用意されている\n",
+    "\n",
+    "```julia\n",
+    "関数 . (配列)\n",
+    "# -> map(関数, 配列)\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3-element Array{Int64,1}:\n",
+       " 5\n",
+       " 7\n",
+       " 9"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f(x) = 3x\n",
+    "\n",
+    "A = [1, 2, 3]\n",
+    "B = [4, 5, 6]\n",
+    "\n",
+    "# map(f, A, B)\n",
+    "## 3 * [1, 2, 3] + 4 * [4, 5, 6]\n",
+    "## -> [19, 26, 33]\n",
+    "f.(A, B)"
    ]
   },
   {
