add: tuto: 例外処理

--- a/04_Jupyter_expression.ipynb
+++ b/04_Jupyter_expression.ipynb
@@ -467,6 +467,295 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 例外処理\n",
+    "予想外の状態が発生した場合、関数の実行を途中で終了し、例外が起こったことを知らせる必要がある\n",
+    "\n",
+    "例外が起こった際の対応は、プログラマに委ねられるため、本来例外が発生するようなプログラムは作成するべきではない\n",
+    "\n",
+    "しかし、プログラムの使用者が想定外の操作をしたり、ハードウェア的なハプニングが起こったりすることを完全に防ぐことはできないため、ほとんどの言語には例外機構が備わっている\n",
+    "\n",
+    "#### Julia標準の例外\n",
+    "- ArgumentError\n",
+    "- BoundsError\n",
+    "- CompositeException\n",
+    "- DivideError\n",
+    "- DomainError\n",
+    "- EOFError\n",
+    "- ErrorException\n",
+    "- InexactError\n",
+    "- InitError\n",
+    "- InterruptException\n",
+    "- InvalidStateException\n",
+    "- KeyError\n",
+    "- LoadError\n",
+    "- OutOfMemoryError\n",
+    "- ReadOnlyMemoryError\n",
+    "- RemoteException\n",
+    "- MethodError\n",
+    "- OverflowError\n",
+    "- ParseError\n",
+    "- SystemError\n",
+    "- TypeError\n",
+    "- UndefRefError\n",
+    "- UndefVarError\n",
+    "- UnicodeError\n",
+    "\n",
+    "#### 独自の例外の定義\n",
+    "Julia標準の例外以外に自分で例外を作成することもできる\n",
+    "\n",
+    "例外の定義は以下のような式で行う\n",
+    "\n",
+    "```julia\n",
+    "struct 例外名 <: Exception\n",
+    "    <定義>\n",
+    "end\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n"
+     ]
+    },
+    {
+     "ename": "DomainError",
+     "evalue": "DomainError with -1:\n",
+     "output_type": "error",
+     "traceback": [
+      "DomainError with -1:\n",
+      "",
+      "Stacktrace:",
+      " [1] f(::Int64) at ./In[27]:5",
+      " [2] top-level scope at In[27]:9"
+     ]
+    }
+   ],
+   "source": [
+    "# 例外は throw関数を使って意図的に発生させることができる\n",
+    "\n",
+    "# 引数が正の場合は、それを出力する関数\n",
+    "## 負の場合は、DomainErrorを投げる\n",
+    "f(x) = x >= 0 ? println(x) : throw(DomainError(x))\n",
+    "\n",
+    "# 動作確認\n",
+    "f(1)\n",
+    "f(-1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n"
+     ]
+    },
+    {
+     "ename": "ErrorException",
+     "evalue": "正の値を指定してください",
+     "output_type": "error",
+     "traceback": [
+      "正の値を指定してください",
+      "",
+      "Stacktrace:",
+      " [1] error(::String) at ./error.jl:33",
+      " [2] f(::Int64) at ./In[28]:5",
+      " [3] top-level scope at In[28]:9"
+     ]
+    }
+   ],
+   "source": [
+    "# error関数を使えば、ErrorExceptionを生成し、通常の制御の流れを中断することができる\n",
+    "\n",
+    "# 引数が正の場合は、それを出力する関数\n",
+    "## 負の場合は、エラーメッセージを出力してプログラム停止\n",
+    "f(x) = x >= 0 ? println(x) : error(\"正の値を指定してください\")\n",
+    "\n",
+    "# 動作確認\n",
+    "f(1)\n",
+    "f(-1)\n",
+    "\n",
+    "# 例外が発生すると以降の処理は実行されない\n",
+    "f(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "2\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "┌ Info: Hi\n",
+      "└ @ Main In[32]:6\n",
+      "┌ Warning: Hi\n",
+      "└ @ Main In[32]:10\n"
+     ]
+    },
+    {
+     "ename": "ErrorException",
+     "evalue": "Hi",
+     "output_type": "error",
+     "traceback": [
+      "Hi",
+      "",
+      "Stacktrace:",
+      " [1] error(::String) at ./error.jl:33",
+      " [2] top-level scope at In[32]:12"
+     ]
+    }
+   ],
+   "source": [
+    "# 例外的な状況ではないが、警告や情報を標準エラー出力に出力したい場合\n",
+    "## @info, @warn マクロが使える\n",
+    "## -> 例外を投げないため実行が中断されない\n",
+    "\n",
+    "# 情報メッセージを出力 -> 処理継続\n",
+    "@info \"Hi\"\n",
+    "println(1 + 1)\n",
+    "\n",
+    "# 警告メッセージを出力 -> 処理継続\n",
+    "@warn \"Hi\"\n",
+    "println(1 + 1)\n",
+    "\n",
+    "# エラーメッセージを出力 -> 処理停止\n",
+    "error(\"Hi\")\n",
+    "println(1 + 1) # <- 実行されない"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "┌ Error: Hi\n",
+      "└ @ Main In[33]:1\n"
+     ]
+    }
+   ],
+   "source": [
+    "# なお @error マクロはエラーメッセージを出力するが、処理は継続する\n",
+    "@error \"Hi\"\n",
+    "println(1 + 1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### try / catch 文\n",
+    "`try`, `catch`文により、例外を検査することができる\n",
+    "\n",
+    "```julia\n",
+    "try\n",
+    "    <例外が起こり得る処理>\n",
+    "catch [例外変数]\n",
+    "    <例外が起こった場合の処理>\n",
+    "end\n",
+    "```\n",
+    "\n",
+    "#### finally 節\n",
+    "try / catch 文に `finally`節を追加することができる\n",
+    "\n",
+    "`finally`節で記述された処理は、例外発生の有無に関わらず実行される\n",
+    "\n",
+    "そのため、プログラムの終了時に行うべきクリーンアップ処理（ファイルを閉じるなど）は `finally`節に記述する"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      ".ipynb_checkpoints/\n",
+      "\n"
+     ]
+    },
+    {
+     "ename": "ErrorException",
+     "evalue": "fakefile は 存在しないファイルです",
+     "output_type": "error",
+     "traceback": [
+      "fakefile は 存在しないファイルです",
+      "",
+      "Stacktrace:",
+      " [1] error(::String) at ./error.jl:33",
+      " [2] fopen(::getfield(Main, Symbol(\"##9#10\")), ::String, ::String) at ./In[35]:9",
+      " [3] fopen(::Function, ::String) at ./In[35]:5",
+      " [4] top-level scope at In[35]:23"
+     ]
+    }
+   ],
+   "source": [
+    "# ファイルを開いて処理を行った後、ファイルを閉じる関数\n",
+    "fopen(callback, filename, mode=\"r\") = begin\n",
+    "    # try / catch 文で定義される変数はローカルスコープであるため\n",
+    "    # ブロック以降も使いたい変数はここで宣言しておく\n",
+    "    io = nothing\n",
+    "    try\n",
+    "        io = open(filename, mode)\n",
+    "    catch\n",
+    "        error(\"$filename は 存在しないファイルです\")\n",
+    "    end\n",
+    "    \n",
+    "    try\n",
+    "        callback(io)\n",
+    "    finally # ファイルを閉じる処理は必ず行う\n",
+    "        close(io)\n",
+    "    end\n",
+    "end\n",
+    "\n",
+    "# .gitignore を読み込んで 内容を出力する\n",
+    "fopen(\".gitignore\") do io\n",
+    "    println(read(io, String))\n",
+    "end\n",
+    "\n",
+    "# 存在しないファイルを読み込もうとした場合\n",
+    "fopen(\"fakefile\") do io\n",
+    "    println(read(io, String))\n",
+    "end"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
