--- a/05_Jupyter_typing.ipynb
+++ b/05_Jupyter_typing.ipynb
@@ -305,6 +305,207 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 複合型\n",
+    "複合型は、名前付きフィールドの集合体であり、言語によっては、レコード、構造体、オブジェクトなどとも呼ばれる\n",
+    "\n",
+    "C++, Java, Python, Rubyなどの主流なオブジェクト指向言語では、複合型に名前付きの関数（メソッド）や変数（メンバ、フィールド）が関連付けられて「オブジェクト」と呼ばれる\n",
+    "\n",
+    "Juliaでは、全ての値がオブジェクトに関連付けられるが、関数は操作対象のオブジェクトに関連付けられない\n",
+    "\n",
+    "これは、各オブジェクトの\"内側\"にたくさんの名前付き関数を入れるよりも、メソッド群を編成して関数オブジェクトにする方が、言語設計上有益であるという思想に根ざしている\n",
+    "\n",
+    "- 主流なオブジェクト指向言語\n",
+    "    ```\n",
+    "    Object1       Object2\n",
+    "      |_ Member1    |_ Member1\n",
+    "      |_ Member2    |_ Member2\n",
+    "      :    :        :    :\n",
+    "      |_ Method1    |_ Method1\n",
+    "      |_ Method2    |_ Method2\n",
+    "      :    :        :    :\n",
+    "    ```\n",
+    "- Julia\n",
+    "    ```\n",
+    "    Object1      Object2     FunctionObject\n",
+    "      |_ Field1    |_ Field1      |_ Method1\n",
+    "      |_ Field2    |_ Field2      |_ Method2\n",
+    "      :    :       :    :         :     :\n",
+    "    ```\n",
+    "\n",
+    "#### 複合型の定義\n",
+    "複合型は以下のような形式で定義できる\n",
+    "\n",
+    "```julia\n",
+    "struct 型名\n",
+    "    フィールド名1 # <- 型注釈のないフィールドは Any型になる\n",
+    "    フィールド名2 :: 型名2\n",
+    "end\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Human(\"Yoya\", 31)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 複合型 Human型を定義\n",
+    "struct Human\n",
+    "    name::String\n",
+    "    age::Int\n",
+    "end\n",
+    "\n",
+    "# 複合型は関数のように呼び出し、型のインスタンスを新しく生成することができる\n",
+    "## これをコンストラクタと呼ぶ\n",
+    "human = Human(\"Yoya\", 31)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(:name, :age)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# fieldnames関数を用いて 複合型のフィールド名を列挙することができる\n",
+    "## fieldnames関数は、複合型を引数に取るため\n",
+    "## fieldnames(human) のように インスタンスを渡してもエラーになる\n",
+    "fieldnames(Human)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Yoya\n",
+      "31\n"
+     ]
+    }
+   ],
+   "source": [
+    "# フィールドへアクセスするには instance.field 記法を使う\n",
+    "## フィールドはシンボルとして定義されているため\n",
+    "## instance[:field] と書けそうだが、この書き方はできない\n",
+    "println(human.name)\n",
+    "println(human.age)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ErrorException",
+     "evalue": "setfield! immutable struct of type Human cannot be changed",
+     "output_type": "error",
+     "traceback": [
+      "setfield! immutable struct of type Human cannot be changed",
+      "",
+      "Stacktrace:",
+      " [1] setproperty!(::Human, ::Symbol, ::Int64) at ./sysimg.jl:19",
+      " [2] top-level scope at In[14]:1"
+     ]
+    }
+   ],
+   "source": [
+    "# 複合型オブジェクトは不変であり、生成後に値を変更することはできない\n",
+    "human.age = 120"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MutableHuman(\"Yoya\", 120)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 可変複合型を定義する場合は、mutable struct を使う\n",
+    "mutable struct MutableHuman\n",
+    "    name::String\n",
+    "    age::Int\n",
+    "end\n",
+    "\n",
+    "human = MutableHuman(\"Yoya\", 31)\n",
+    "\n",
+    "human.age = 120\n",
+    "println(human)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 宣言型\n",
+    "抽象型、原始型、複合型には以下のような共通点がある\n",
+    "\n",
+    "- 明示的に宣言される\n",
+    "- 名前がある\n",
+    "- 親タイプが存在する\n",
+    "- パラメータを持つことができる\n",
+    "\n",
+    "これらの特徴を持つ型は、**宣言型**と呼ばれ、内部的には `DataType`のインスタンスとして表現される\n",
+    "\n",
+    "システムにおけるあらゆる型は、`DataType`のインスタンスであるため、何らかの型のインスタンスである全ての値は、何らかの`DataType`のインスタンスであると言える"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DataType"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "typeof(Int)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
