add: tuto: 全結合型

--- a/05_Jupyter_typing.ipynb
+++ b/05_Jupyter_typing.ipynb
@@ -205,7 +205,7 @@
     }
    ],
    "source": [
-    "# <: 演算子は「is a instance of」（〜の子タイプである）を意味する\n",
+    "# <: 演算子は「is a sub type of」（〜の子タイプである）を意味する\n",
     "\n",
     "## Integer は Number の子タイプか -> true\n",
     "Integer <: Number"
@@ -376,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -385,7 +385,7 @@
        "(:name, :age)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -399,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -421,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -433,7 +433,7 @@
       "",
       "Stacktrace:",
       " [1] setproperty!(::Human, ::Symbol, ::Int64) at ./sysimg.jl:19",
-      " [2] top-level scope at In[14]:1"
+      " [2] top-level scope at In[9]:1"
      ]
     }
    ],
@@ -444,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -487,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -496,13 +496,329 @@
        "DataType"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "typeof(Int)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 合併型\n",
+    "合併型は特殊な抽象型で、指定されたいずれかの型のインスタンスをオブジェクトとして含む\n",
+    "\n",
+    "例として、以下のようにして定義された合併型 `IntOrString` は、整数型もしくは文字列型の値のみを取り得る\n",
+    "\n",
+    "```julia\n",
+    "# IntOrString合併型 = Int | AbstractString\n",
+    "IntOrString = Union{Int, AbstractString}\n",
+    "\n",
+    "1 :: IntOrString # -> 1\n",
+    "\"1\" :: IntOrString # -> \"1\"\n",
+    "1.0 :: IntOrString # -> Error\n",
+    "```\n",
+    "\n",
+    "\n",
+    "### パラメトリック型\n",
+    "パラメトリック型は、パラメータをもつ型であり、パラメータに指定された型の組み合わせの分だけ新しい型の一族を導入することができる\n",
+    "\n",
+    "これにより、型の汎用性を無制限に上げることができる\n",
+    "\n",
+    "#### パラメトリック複合型\n",
+    "パラメトリック型の例として、一番わかり易いのはパラメトリック複合型である\n",
+    "\n",
+    "以下は、任意の型 `T` のフィールド x, y を持つ複合型 `Point` を定義している\n",
+    "\n",
+    "```julia\n",
+    "struct Point{T}\n",
+    "    x::T\n",
+    "    y::T\n",
+    "end\n",
+    "```\n",
+    "\n",
+    "上記の `Point` 型は、それ単体では型としてインスタンス化することはできず、型パラメータを指定する必要がある\n",
+    "\n",
+    "例えば、Int型の x, y フィールドを持つ Point型を定義したい場合は、`Point{Int}`のように記述する\n",
+    "\n",
+    "このようにすることで、異なる型をフィールドに持つ複合型を好きなように定義することが可能となる\n",
+    "\n",
+    "#### パラメトリック抽象型\n",
+    "複合型同様、抽象型にもパラメータを付与することができる\n",
+    "\n",
+    "```julia\n",
+    "abstract type 型名 {型パラメータ名} end\n",
+    "```\n",
+    "\n",
+    "パラメトリック抽象型には、インスタンスが型`T`のみの特殊な抽象型である **シングルトン型** というものがある\n",
+    "\n",
+    "これは `Type{T}` によって定義される\n",
+    "\n",
+    "```julia\n",
+    "# Float64シングルトン型は Float64型のみをインスタンスとして持つ\n",
+    "\n",
+    "## Float64型は Float64シングルトン型のインスタンスか -> true\n",
+    "isa(Float64, Type{Floa64})\n",
+    "\n",
+    "## Real型は Float64シングルトン型のインスタンスか -> false\n",
+    "isa(Real, Type{Floa64})\n",
+    "```\n",
+    "\n",
+    "#### パラメトリック原始型\n",
+    "同様に、原始型にもパラメータを付与することができる\n",
+    "\n",
+    "```julia\n",
+    "# 32-bit system:\n",
+    "primitive type Ptr{T} 32 end\n",
+    "\n",
+    "# 64-bit system:\n",
+    "primitive type Ptr{T} 64 end\n",
+    "```\n",
+    "\n",
+    "\n",
+    "### タプル型\n",
+    "タプル型は、関数の引数部分のみを抜き出した型である\n",
+    "\n",
+    "その特徴は、順序と型が対応しているということである\n",
+    "\n",
+    "そのため、タプル型は、複数パラメータを持つパラメトリック複合型によく似ている\n",
+    "\n",
+    "例えば、2要素のタプル型は、以下のようなパラメトリック複合型に似ている\n",
+    "\n",
+    "```julia\n",
+    "struct Tuple2{A, B}\n",
+    "    a::A\n",
+    "    b::B\n",
+    "end\n",
+    "```\n",
+    "\n",
+    "ただし、タプル型とパラメトリック複合型には明確な違いが3つある\n",
+    "\n",
+    "1. タプル型は任意の数のパラメータを持つことができる\n",
+    "2. タプル型は、そのパラメータと共変である\n",
+    "    - 例えば Int型は Any型の子タイプであるため、Any型と共変（置き換え可能）である\n",
+    "    - タプル型 `Tuple{Int}` は、Int型の親タイプである Any型をパラメータに持つ `Tuple{Any}` と共変（置き換え可能）である\n",
+    "    - 一方で、パラメトリック複合型 `Point{Int}` は、`Point{Any}` に置き換えることができない（不変である）\n",
+    "3. タプル型にはフィールド名がなく、インデックスによってのみアクセスできる\n",
+    "\n",
+    "タプル型は、タプルの値が宣言された時点で、新しいタプル型が生成される"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Tuple{Int64,String,Float64}"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 以下のタプル値が宣言されたタイミングで\n",
+    "## Tuple{Int64,String,Float64} 型が新たに生成される\n",
+    "\n",
+    "tuple = (1, \"foo\", 3.14)\n",
+    "typeof(tuple)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "パラメトリック複合型\n",
+      "false\n",
+      "true\n",
+      "false\n",
+      "\n",
+      "シングルトン型\n",
+      "false\n",
+      "true\n",
+      "\n",
+      "タプル型\n",
+      "true\n",
+      "false\n"
+     ]
+    }
+   ],
+   "source": [
+    "# -- パラメトリック複合型は不変 --\n",
+    "struct Point{T}\n",
+    "    x::T\n",
+    "    y::T\n",
+    "end\n",
+    "\n",
+    "println(\"パラメトリック複合型\")\n",
+    "\n",
+    "# Int <: Real -> true だが\n",
+    "## Point{Int} <: Point{Real} -> false\n",
+    "println(Point{Int} <: Point{Real})\n",
+    "\n",
+    "# Point{Int} のインスタンスの型のみが唯一 Point{Int} の子タイプである\n",
+    "println(typeof(Point(10, 20)) <: Point{Int})\n",
+    "\n",
+    "# Point{Int} のインスタンスは、Point{Real} のインスタンスではない\n",
+    "println(isa(Point(10, 20), Point{Real}))\n",
+    "\n",
+    "\n",
+    "# -- シングルトン型も不変 --\n",
+    "println(\"\\nシングルトン型\")\n",
+    "\n",
+    "# Type{Int}シングルトン型 のインスタンスは Int型のみ\n",
+    "## パラメトリック複合型と異なり\n",
+    "## Type{Int}シングルトン型は、Int型の親タイプではない\n",
+    "println(Int <: Type{Int}) # -> false\n",
+    "println(isa(Int, Type{Int})) # -> true\n",
+    "\n",
+    "\n",
+    "# -- Tuple型はパラメータと共変 --\n",
+    "println(\"\\nタプル型\")\n",
+    "\n",
+    "# Int <: Real -> true より\n",
+    "## Tuple{Int} <: Tuple{Real} -> true\n",
+    "println(Tuple{Int} <: Tuple{Real})\n",
+    "\n",
+    "# Int <: AbstractString -> false より\n",
+    "## Tuple{Int, Int} <: Tuple{Real, AbstractString} -> false\n",
+    "println(Tuple{Int, Int} <: Tuple{Real, AbstractString})"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 可変引数タプル型\n",
+    "タプル型の最後のパラメータは、特殊な可変引数型 `Vararg{}` として任意の数の皇族の要素を示すことができる\n",
+    "\n",
+    "`Vararg{T}`は、0個以上の型`T`に対応する"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Tuple{AbstractString,Vararg{Int64,N} where N}"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 文字列型の後ろに任意の数のInt型が続くタプル型\n",
+    "vatuple = Tuple{AbstractString, Vararg{Int}}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "false\n",
+      "true\n",
+      "true\n",
+      "false\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 文字列のみのタプル -> false\n",
+    "println(isa((\"1\"), vatuple))\n",
+    "\n",
+    "# 文字列の後ろに0個のInt値がある -> true\n",
+    "println(isa((\"1\", ), vatuple))\n",
+    "\n",
+    "# 文字列の後ろに2個のInt値がある -> true\n",
+    "println(isa((\"1\", 1, 2), vatuple))\n",
+    "\n",
+    "# 文字列の後ろに1個のFloat64値がある -> false\n",
+    "println(isa((\"1\", 3.14), vatuple))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 全合併型\n",
+    "`Ptr{T}` のようなパラメトリック型は、全てのインスタンス型（`Ptr{Int64}` など）の親タイプのように振る舞う\n",
+    "\n",
+    "しかし、`Ptr`自体は、参照するデータの種類がわからなければ、その型を記憶操作に使用することができない\n",
+    "\n",
+    "これを実現するために、パラメトリック型のような型は、あるパラメータを全ての値に対して繰り返し合併した型を表現する\n",
+    "\n",
+    "そのため、このような型を **全合併型** と呼ぶ\n",
+    "\n",
+    "#### 全合併型の型宣言\n",
+    "全合併型であることを明示するためには `where` キーワードを使う\n",
+    "\n",
+    "```julia\n",
+    "# -- 例 --\n",
+    "\n",
+    "# パラメトリック複合型\n",
+    "## パラメータ T をフィールド x, y に対して繰り返し合併する\n",
+    "struct Point{T} where T\n",
+    "    x::T\n",
+    "    y::T\n",
+    "end\n",
+    "\n",
+    "# パラメトリック抽象型\n",
+    "## パラメータ T, N を型に対してネストして繰り返し合併する\n",
+    "abstract type Array{T, N} where T where N end\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Array{Float64,N} where N\n",
+      "Array{T,2} where T\n"
+     ]
+    }
+   ],
+   "source": [
+    "# -- 部分インスタンス化 --\n",
+    "\n",
+    "# 複数パラメータはネストして繰り返し合併されるため、部分的に適用することが可能\n",
+    "## -> A{B, C} と A{B}{C} は等価\n",
+    "\n",
+    "# 例: N次元のFloat64型配列\n",
+    "## -> Array{Float64, N} where N と等価\n",
+    "const FloatArray = Array{Float64}\n",
+    "println(FloatArray)\n",
+    "\n",
+    "# 例: 全ての2次元の配列\n",
+    "const Array2D = Array{T, 2} where T\n",
+    "println(Array2D)"
    ]
   },
   {
