--- a/02_Julia_types.ipynb
+++ b/02_Julia_types.ipynb
@@ -326,7 +326,7 @@
     "\n",
     "文字列から文字を抽出する場合は`String[index]`という形式で、インデックスを添える\n",
     "\n",
-    "ただし、Juliaではインデックスは1から始まる"
+    "ただし、Juliaでは**インデックスは1から始まる**（配列なども同様）"
    ]
   },
   {
