add: tuto: 型システムまとめ

--- a/06_Jupyter_typing.ipynb
+++ b/06_Jupyter_typing.ipynb
@@ -124,6 +124,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### 型システムまとめ\n",
+    "Juliaの型システムをまとめると、以下のようになっている\n",
+    "\n",
+    "- 宣言型: `DataType`のインスタンス\n",
+    "    - 抽象型: `abstract type`\n",
+    "    - 原始型: `primitive type`\n",
+    "    - 複合型: `struct`\n",
+    "- 全合併型: `{T} where T`\n",
+    "    - 合併型: `Union{}`\n",
+    "    - パラメトリック型:\n",
+    "        - パラメトリック抽象型\n",
+    "        - パラメトリック原始型\n",
+    "        - パラメトリック複合型\n",
+    "    - タプル型: `Tuple{}`\n",
+    "\n",
+    "\n",
     "### 抽象型\n",
     "抽象型とは、その子孫となる具象型の集合である\n",
     "\n",
